--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -38,3 +38,25 @@ button {
 button:hover {
     filter: brightness(120%);
 }
+
+ul {
+    list-style: none;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeOut {
+    100% {
+        opacity: 1;
+    }
+    0% {
+        opacity: 0;
+    }
+}
