--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -203,7 +203,6 @@
 }
 
 .nav__link {
-    min-width: 50px;
     margin: 0 3px;
 }
 
@@ -222,8 +221,6 @@
     background-color: #ffffff15;
 }
 
-.nav__item i {
-}
 
 .nav__text {
     margin-left: 7px;
@@ -233,7 +230,7 @@
 }
 
 .nav__selected {
-    border: 1px solid var(--white-color);
+    outline: 1px solid var(--white-color);
     background-color: #ffffff15;
 
 }
@@ -328,7 +325,7 @@
 .subFooter__title {
     margin-top: 50px;
     color: #f3eeee;
-    font-size: 2.5rem;
+    font-size: 2.3rem;
 }
 
 .subFooter__desc {
@@ -555,9 +552,6 @@
     .footer__text {
         display: grid;
         grid-template-columns: 1fr 1fr;
-    }
-    .nav__link {
-        min-width: 150px;
     }
 }
 
